syntax = "proto3";

package go.micro.srv.PutOrders;

service Example {
	rpc PutOrders(Request) returns (Response) {}
	rpc Stream(StreamingRequest) returns (stream StreamingResponse) {}
	rpc PingPong(stream Ping) returns (stream Pong) {}
}

message Message {
	string say = 1;
}
//web -》srv
message Request {
	string Sessionid = 1;
	string Orderid = 2;
	string Action = 3;
}
//srv ——》web
message Response {
	string Errno = 1;
	string Errmsg = 2;
}

message StreamingRequest {
	int64 count = 1;
}

message StreamingResponse {
	int64 count = 1;
}

message Ping {
	int64 stroke = 1;
}

message Pong {
	int64 stroke = 1;
}
